--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
     "firebase": "^12.4.0",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
