--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "firebase": "^12.4.0",
+    "firebase-admin": "^13.5.0",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.3",
+    "recharts": "^3.3.0",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
