--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "lucide-react": "^0.545.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-router": "^7.9.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.3.0",
     "tailwindcss": "^4.1.14"
   },
@@ -26,8 +27,8 @@
     "@biomejs/biome": "2.2.5",
     "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
