--- a/biome.json
+++ b/biome.json
@@ -9,7 +9,6 @@
     "indentStyle": "space",
     "indentWidth": 2,
     "lineWidth": 100
-    
   },
   "javascript": {
     "formatter": {
@@ -21,7 +20,10 @@
   "linter": {
     "enabled": true,
     "rules": {
-      "recommended": true
+      "complexity": {
+        "recommended": true,
+        "noUselessFragments": "error"
+      }
     }
   }
 }
